# Mnemos

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  MNEMOS_API.md  MNEMOS_SPEC.md  Mnemos.txt  README.md  TODO.md  alembic.ini  prompt_claude_design.txt  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 20260702_30beed46db04_semantic_initial_schema.py  20260702_accd3092e2d2_episodic_initial_schema.py  20260704_cbc872b3573c_episodic_add_tenant.py  20260704_df716235da4c_semantic_add_tenant.py
poc/: RESULTS.md  bench_models.py  raw_extractions.jsonl
scripts/: backup.ps1  backup.sh  demo.py  import_dump.py  reset_dbs.ps1  reset_dbs.sh  setup_ollama_models.ps1  setup_ollama_models.sh  smoke_tenant.py
src/mnemos/: __init__.py  cli.py  clock.py  config.py  logging.py  mcp_server.py  ontology.py  server.py  tenancy.py
src/mnemos/api/: deps.py  graph.py  routes.py  schemas.py
src/mnemos/consolidation/: extractor.py  worker.py
src/mnemos/embeddings/: dense.py  sparse.py
src/mnemos/llm/: model_manager.py  ollama_client.py
src/mnemos/models/: base.py  episodic.py  (+1 more)
tests/: conftest.py
tests/integration/: test_admin_api.py  test_consolidation_loop.py  test_episodic_store.py  test_graph_api.py  test_health.py  test_llm_infra.py  test_query_api.py  test_read_path.py  test_tenant_api.py  test_write_path.py
tests/unit/: test_clock.py  test_config.py  test_conflict_resolver.py  test_dense.py  test_extractor.py  test_model_manager.py  test_procedural.py  test_router.py  test_salience.py  test_sparse.py  test_tenant_isolation.py  test_working.py
(+8 files in other folders)
