[project]
name = "mnemos"
version = "0.1.0"
description = "Multi-system memory server for LLM agents (working/episodic/semantic/procedural)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "sqlite-vec>=0.1.6",
    "structlog>=25",
    "apscheduler>=3.10,<4",
    "typer>=0.12",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
    "python-ulid>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
mnemos = "mnemos.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mnemos"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "requires_ollama: tests nécessitant un Ollama local (skip auto si down)",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.ruff.lint.per-file-ignores]
# Prompt v4 : les exemples one-line font partie du prompt validé par le POC
"src/mnemos/consolidation/extractor.py" = ["E501"]

[tool.mypy]
strict = true
packages = ["mnemos"]
mypy_path = "src"
